--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "incremental-dom": "^0.5.1",
+    "materialize-css": "^0.100.2",
     "workbox-sw": "2.1.1"
   }
 }
