--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "clean:all": "npm run clean; rm -rf node_modules",
     "predist": "npm run clean && npm run tslint && npm run build && npm run test",
     "dist": "npm run bundle && npm run swim && npm run static",
-    "dist:watch": "parallelshell 'npm run bundle:watch' 'npm run static:watch'",
+    "dist:watch": "npm-run-all -p -r static:watch bundle:watch",
     "server": "http-server dist/",
-    "dev": "parallelshell 'npm run static:watch' 'npm run bundle:watch' 'npm run server'",
+    "start": "npm-run-all -p -r static:watch bundle:watch server",
     "deploy:gh-pages": "git subtree push --prefix gh-pages origin gh-pages",
     "undeploy:gh-pages": "git push origin --delete gh-pages"
   },
@@ -40,8 +40,8 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-requirejs": "^1.1.0",
     "mocha": "^3.1.2",
+    "npm-run-all": "^4.1.2",
     "onchange": "^3.2.1",
-    "parallelshell": "^3.0.2",
     "requirejs": "^2.3.2",
     "rollup": "^0.36.3",
     "rollup-multiple": "^0.41.6",
@@ -58,6 +58,7 @@
   "dependencies": {
     "incremental-dom": "^0.5.1",
     "material-components-web": "^0.25.0",
+    "material-datetime-picker": "^2.4.0",
     "workbox-sw": "2.1.1"
   }
 }
