npm scripts improved, cpx, rimraf

--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "workbox": "workbox",
     "swim": "workbox inject:manifest",
     "swim:watch": "onchange 'dist/sw.js' -v -- npm run swim",
-    "static": "mkdir -p dist/ && cp -R src/static/* dist/",
-    "static:watch": "npm run static && onchange 'src/static/*.*' -v -- npm run static",
-    "clean": "rm -rf build/; rm -rf dist/",
-    "clean:all": "npm run clean; rm -rf node_modules",
-    "predist": "npm run clean && npm run tslint && npm run build && npm run test",
-    "dist": "npm run bundle && npm run swim && npm run static",
+    "static": "cpx 'src/static/**/*.*' 'dist/' -u -v",
+    "static:watch": "npm run static -- -w",
+    "clean": "rimraf build/; rimraf dist/",
+    "clean:all": "npm run clean; rimraf node_modules",
+    "predist": "npm-run-all clean tslint build test",
+    "dist": "npm-run-all bundle swim static",
     "dist:watch": "npm-run-all -p -r static:watch bundle:watch",
     "server": "http-server dist/",
     "start": "npm-run-all -p -r static:watch bundle:watch server",
@@ -31,6 +31,7 @@
     "@types/chai": "^3.4.34",
     "@types/mocha": "^2.2.33",
     "chai": "^3.5.0",
+    "cpx": "^1.5.0",
     "http-server": "^0.10.0",
     "karma": "^1.3.0",
     "karma-chai": "^0.1.0",
@@ -43,6 +44,7 @@
     "npm-run-all": "^4.1.2",
     "onchange": "^3.2.1",
     "requirejs": "^2.3.2",
+    "rimraf": "^2.6.2",
     "rollup": "^0.36.3",
     "rollup-multiple": "^0.41.6",
     "rollup-plugin-babel": "^2.6.1",
