--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@types/assertion-error": "^1.0.30",
     "@types/chai": "^3.4.34",
+    "@types/leaflet": "^1.2.3",
     "@types/mocha": "^2.2.33",
     "chai": "^3.5.0",
     "cpx": "^1.5.0",
@@ -48,7 +49,9 @@
     "rollup": "^0.36.3",
     "rollup-multiple": "^0.41.6",
     "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-copy": "^0.2.3",
+    "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^1.1.1",
     "rollup-plugin-typescript": "^0.8.1",
     "rollup-plugin-uglify": "^1.0.1",
@@ -59,6 +62,7 @@
   },
   "dependencies": {
     "incremental-dom": "^0.5.1",
+    "leaflet": "^1.2.0",
     "workbox-sw": "2.1.1"
   }
 }
