--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -18,5 +18,5 @@
   "display": "standalone",
   "background_color": "#fff",
   "theme_color": "#fff",
-  "orientation": "portrait"
+  "orientation": "any"
 }
